cors error retry hardcoding