@@ -1,10 +1,9 @@
-// WebSecurityConfig.java (수정된 버전)
+// WebSecurityConfig.java (완전한 버전 - 하드코딩)
 package com.unknown.kimsblog.config;
 
 import com.unknown.kimsblog.service.UserDetailService;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -23,7 +22,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.cors.CorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 @EnableWebSecurity
@@ -32,28 +31,17 @@ public class WebSecurityConfig {
 
     private final UserDetailService userDetailService;
 
-    // 환경변수에서 프론트엔드 URL 주입
-    @Value("${FRONTEND_URL}")
-    private String frontendUrl;
-
-    @Value("${VERCEL_PATTERN}")
-    private String vercelPattern;
-
-    @Value("${GIT_PATTERN}")
-    private String gitPattern;
-
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         return http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
 
-                // 세션 관리 설정 - .and() 제거하고 체이닝 방식으로 변경
+                // 세션 관리 설정
                 .sessionManagement(session -> {
                     session.sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED)
                             .maximumSessions(1)
-                            .maxSessionsPreventsLogin(false)
-                            .sessionRegistry(null); // 필요시 SessionRegistry 설정
+                            .maxSessionsPreventsLogin(false);
                     session.sessionFixation().migrateSession()
                             .invalidSessionUrl("/api/auth/status");
                 })
@@ -63,40 +51,56 @@ public class WebSecurityConfig {
                         .securityContextRepository(securityContextRepository()))
 
                 .authorizeHttpRequests(auth -> auth
+                        // ===========================================
+                        // 🚨 공개 API - 인증 없이 접근 가능
+                        // ===========================================
+                        
+                        // 디버그 및 헬스체크
+                        .requestMatchers("/api/debug/**").permitAll()
+                        .requestMatchers("/api/health").permitAll()
+                        
+                        // OPTIONS 요청 (CORS preflight) - 최우선
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        
                         // 정적 파일 및 기본 페이지
                         .requestMatchers("/static/**").permitAll()
-                        .requestMatchers("/login", "/signup", "/api/login", "/api/signup").permitAll()
+                        .requestMatchers("/login", "/signup").permitAll()
+                        
+                        // 인증 관련 API
+                        .requestMatchers("/api/login", "/api/signup").permitAll()
                         .requestMatchers("/api/auth/status").permitAll()
                         .requestMatchers("/api/logout").permitAll()
-                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
                         // 비밀번호 재설정 관련 엔드포인트
-                        .requestMatchers("/api/password/forgot").permitAll()
-                        .requestMatchers("/api/password/validate-token").permitAll()
-                        .requestMatchers("/api/password/reset").permitAll()
+                        .requestMatchers("/api/password/**").permitAll()
                         .requestMatchers("/forgot-password", "/reset-password").permitAll()
 
-                        // 댓글 관련 API - 모든 댓글 작업을 로그인 없이 허용
-                        .requestMatchers("/api/posts/*/comments", "/api/posts/*/comments/**").permitAll()
-                        .requestMatchers("/api/comments/**").permitAll()
-
-                        // 게시글 관련 API
-                        .requestMatchers(HttpMethod.GET, "/api/posts", "/api/posts/**").permitAll()
+                        // ===========================================
+                        // 📝 게시글 관련 API - 구체적인 경로부터
+                        // ===========================================
                         .requestMatchers(HttpMethod.GET, "/api/posts/paged").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/posts").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/posts/**").permitAll()
+                        
+                        // 게시글 작성/수정/삭제는 인증 필요
+                        .requestMatchers(HttpMethod.POST, "/api/posts").authenticated()
                         .requestMatchers(HttpMethod.POST, "/api/posts/**").authenticated()
                         .requestMatchers(HttpMethod.PUT, "/api/posts/**").authenticated()
                         .requestMatchers(HttpMethod.DELETE, "/api/posts/**").authenticated()
 
-                        // 퀴즈 관련 API 권한 설정
-                        // 퀴즈 조회는 모든 사용자에게 허용 (로그인 없이도 볼 수 있음)
-                        // .requestMatchers(HttpMethod.GET, "/api/quiz", "/api/quiz/**").permitAll()
-                        // .requestMatchers(HttpMethod.GET, "/api/quiz/by-category").permitAll()
-                        // .requestMatchers(HttpMethod.GET, "/api/quiz/categories").permitAll()
-                        // .requestMatchers(HttpMethod.GET, "/api/quiz/random").permitAll()
-                        // .requestMatchers(HttpMethod.GET, "/api/quiz/popular").permitAll()
-                        // .requestMatchers(HttpMethod.GET, "/api/quiz/latest").permitAll()
-                        // .requestMatchers(HttpMethod.GET, "/api/quiz/*/play").permitAll()
+                        // ===========================================
+                        // 💬 댓글 관련 API (모든 작업 공개)
+                        // ===========================================
+                        .requestMatchers("/api/posts/*/comments").permitAll()
+                        .requestMatchers("/api/posts/*/comments/**").permitAll()
+                        .requestMatchers("/api/comments/**").permitAll()
 
+                        // ===========================================
+                        // 🧩 퀴즈 관련 API
+                        // ===========================================
+                        .requestMatchers(HttpMethod.GET, "/api/quiz/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/quiz").permitAll()
+                        
                         // 퀴즈 생성, 수정, 삭제, 답안 제출은 인증 필요
                         .requestMatchers(HttpMethod.POST, "/api/quiz").authenticated()
                         .requestMatchers(HttpMethod.PUT, "/api/quiz/**").authenticated()
@@ -106,11 +110,14 @@ public class WebSecurityConfig {
                         .requestMatchers("/api/quiz/my-results").authenticated()
                         .requestMatchers("/api/quiz/unsolved").authenticated()
 
-                        // 통계 관련 API
+                        // ===========================================
+                        // 📊 통계 관련 API
+                        // ===========================================
                         .requestMatchers(HttpMethod.GET, "/api/stats/global").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/stats/leaderboard/**").permitAll()
                         .requestMatchers("/api/stats/me").authenticated()
 
+                        // 나머지는 인증 필요
                         .anyRequest().authenticated())
 
                 .formLogin(AbstractHttpConfigurer::disable)
@@ -134,6 +141,8 @@ public class WebSecurityConfig {
                         .authenticationEntryPoint((request, response, authException) -> {
                             System.out.println("=== Authentication Entry Point ===");
                             System.out.println("Unauthorized access to: " + request.getRequestURI());
+                            System.out.println("Method: " + request.getMethod());
+                            System.out.println("Origin: " + request.getHeader("Origin"));
                             response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
                             response.getWriter().write("{\"error\":\"Authentication required\"}");
                             response.setContentType("application/json");
@@ -160,37 +169,56 @@ public class WebSecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        // 디버깅용 로그 추가
-        System.out.println("=== CORS Configuration Debug ===");
-        System.out.println("FRONTEND_URL: " + frontendUrl);
-        System.out.println("VERCEL_PATTERN: " + vercelPattern);
-        System.out.println("GIT_PATTERN: " + gitPattern);
+        System.out.println("=== CORS Configuration (하드코딩 버전) ===");
         
         CorsConfiguration config = new CorsConfiguration();
 
-        // 환경변수에서 받은 프론트엔드 URL 사용
-        // 개발환경에서는 localhost의 모든 포트, 운영환경에서는 정확한 도메인
-        if (frontendUrl.contains("localhost")) {
-            // 로컬 개발환경: localhost의 모든 포트 허용
-            config.setAllowedOriginPatterns(List.of("http://localhost:*", "https://localhost:*"));
-        } else {
-            // 운영환경: 정확한 도메인만 허용
-            config.setAllowedOrigins(List.of(
-                    frontendUrl,
-                    vercelPattern,
-                    gitPattern));
-        }
+        // 🎯 하드코딩된 허용 URL들 (환경변수 의존성 제거)
+        config.setAllowedOrigins(Arrays.asList(
+            // Vercel 도메인들
+            "https://kimsblogfront.vercel.app",
+            "https://kimsblogfront-seunghyuns-projects-1b045e8e.vercel.app",
+            "https://kimsblogfront-git-main-seunghyuns-projects-1b045e8e.vercel.app",
+            
+            // 개발환경
+            "http://localhost:3000",
+            "http://localhost:5173",
+            "http://127.0.0.1:3000",
+            "http://127.0.0.1:5173"
+        ));
 
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD", "PATCH"));
-        config.setAllowedHeaders(List.of("*"));
+        // 🌟 추가로 패턴도 허용 (Vercel 자동 생성 URL 대응)
+        config.setAllowedOriginPatterns(Arrays.asList(
+            "https://kimsblogfront-*.vercel.app",
+            "https://kimsblogfront-git-*.vercel.app"
+        ));
+
+        config.setAllowedMethods(Arrays.asList(
+            "GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD", "PATCH"
+        ));
+        
+        config.setAllowedHeaders(Arrays.asList("*"));
         config.setAllowCredentials(true);
         config.setMaxAge(3600L);
 
-        // 노출할 헤더 설정 (필요시)
-        config.setExposedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
+        // 노출할 헤더 설정
+        config.setExposedHeaders(Arrays.asList(
+            "Authorization", 
+            "Cache-Control", 
+            "Content-Type",
+            "Access-Control-Allow-Origin",
+            "Access-Control-Allow-Methods",
+            "Access-Control-Allow-Headers"
+        ));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
+
+        System.out.println("CORS 허용 Origin:");
+        System.out.println("- https://kimsblogfront.vercel.app");
+        System.out.println("- https://kimsblogfront-*.vercel.app");
+        System.out.println("- http://localhost:3000");
+        System.out.println("CORS 설정 완료!");
 
         return source;
     }
